--- a/index.html
+++ b/index.html
@@ -2,10 +2,55 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Plateforme Énergie</title>
+<title>Plateforme didactique – Travail et énergie</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 20px; background:#f5f5f5; }
+section { background:#ffffff; padding:20px; margin-bottom:20px; border-radius:8px; }
+h1, h2 { color:#003366; }
+iframe { border:1px solid #ccc; border-radius:6px; }
+</style>
 </head>
+
 <body>
+
 <h1>Plateforme didactique – Travail et énergie</h1>
-<p>Site de test – thèse</p>
+<p><b>Niveau :</b> Lycée – Programme marocain</p>
+
+<section>
+<h2>1. Rappels : Travail et énergie mécanique</h2>
+<p>
+Le travail mécanique est un mode de transfert d’énergie.
+L’énergie mécanique est la somme des énergies cinétique et potentielle.
+</p>
+</section>
+
+<section>
+<h2>2. Activité interactive : Transformations de l’énergie (PhET)</h2>
+<p><b>Objectif :</b> Observer les transformations de l’énergie sous l’effet d’une action mécanique.</p>
+
+<iframe 
+src="https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_fr.html"
+width="100%" height="500">
+</iframe>
+</section>
+
+<section>
+<h2>3. Activité : Énergie thermique et frottement</h2>
+<p><b>Question :</b> Que devient l’énergie mécanique lors du frottement ?</p>
+
+<iframe 
+src="https://phet.colorado.edu/sims/html/friction/latest/friction_fr.html"
+width="100%" height="500">
+</iframe>
+</section>
+
+<section>
+<h2>4. Vers l’énergie interne</h2>
+<p>
+Lorsqu’un système reçoit un travail mécanique, son énergie interne peut augmenter.
+Cette énergie est liée à l’agitation microscopique des particules.
+</p>
+</section>
+
 </body>
 </html>
