--- a/index.html
+++ b/index.html
@@ -2,116 +2,38 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Plateforme didactique – Travail et énergie</title>
-
+<title>Plateforme – Travail et énergie</title>
 <style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background: #f4f6f8;
-  line-height: 1.6;
-}
-
-header {
-  background: #003366;
-  color: white;
-  padding: 20px;
-  text-align: center;
-}
-
-nav {
-  background: #005599;
-  padding: 12px;
-  text-align: center;
-}
-
-nav a {
-  color: white;
-  margin: 0 15px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-nav a:hover {
-  text-decoration: underline;
-}
-
-section {
-  background: white;
-  margin: 20px;
-  padding: 20px;
-  border-radius: 8px;
-}
-
-iframe {
-  border: none;
-  margin-top: 15px;
-}
-
-footer {
-  background: #003366;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  margin-top: 30px;
-}
+body { font-family: Arial; background:#f4f6f8; margin:0; }
+header { background:#003366; color:white; padding:20px; text-align:center; }
+nav { background:#005599; padding:10px; text-align:center; }
+nav a { color:white; margin:0 10px; text-decoration:none; font-weight:bold; }
+section { background:white; margin:20px; padding:20px; border-radius:8px; }
 </style>
-
 </head>
 
 <body>
 
 <header>
-  <h1>Plateforme didactique – Travail et énergie</h1>
-  <p>Physique | Lycée | Programme marocain</p>
+<h1>Plateforme didactique – Travail et énergie</h1>
+<p>1ʳᵉ Bac Sciences Mathématiques & Sciences Physiques</p>
 </header>
 
 <nav>
-  <a href="#rappels">Rappels</a>
-  <a href="#phet1">Énergie mécanique</a>
-  <a href="#phet2">Énergie thermique</a>
-  <a href="#interne">Énergie interne</a>
+<a href="energie-cinetique.html">Énergie cinétique</a>
+<a href="#">Énergie mécanique</a>
+<a href="#">Énergie thermique</a>
+<a href="#">Énergie interne</a>
 </nav>
 
-<section id="rappels">
-<h2>1. Rappels : Travail et énergie mécanique</h2>
+<section>
+<h2>Objectif de la plateforme</h2>
 <p>
-Le travail mécanique est un mode de transfert d’énergie.
-L’énergie mécanique est la somme des énergies cinétique et potentielle.
+Cette plateforme aide les élèves à comprendre le concept d’énergie
+à travers des cours, des simulations interactives et des exercices,
+conformément au programme marocain.
 </p>
 </section>
-
-<section id="phet1">
-<h2>2. Activité interactive : Transformations de l’énergie (PhET)</h2>
-<p><b>Objectif :</b> Observer les transformations de l’énergie sous l’effet d’une action mécanique.</p>
-
-<iframe 
-src="https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_fr.html"
-width="100%" height="500">
-</iframe>
-</section>
-
-<section id="phet2">
-<h2>3. Activité : Énergie thermique et frottement</h2>
-<p><b>Question :</b> Que devient l’énergie mécanique lors du frottement ?</p>
-
-<iframe 
-src="https://phet.colorado.edu/sims/html/friction/latest/friction_fr.html"
-width="100%" height="500">
-</iframe>
-</section>
-
-<section id="interne">
-<h2>4. Vers l’énergie interne</h2>
-<p>
-Lorsqu’un système reçoit un travail mécanique, son énergie interne peut augmenter.
-Cette énergie est liée à l’agitation microscopique des particules.
-</p>
-</section>
-
-<footer>
-<p>Plateforme conçue dans le cadre d’une thèse en didactique de la physique – Maroc</p>
-</footer>
 
 </body>
 </html>
