--- a/energie-cinetique.html
+++ b/energie-cinetique.html
@@ -2,24 +2,71 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Travail et énergie cinétique</title>
+<title>Énergie cinétique – 1ʳᵉ Bac</title>
 
 <style>
-body { font-family: Arial; background:#f4f6f8; margin:0; }
-header { background:#003366; color:white; padding:20px; text-align:center; }
-nav { background:#005599; padding:10px; text-align:center; }
-nav a { color:white; margin:0 10px; text-decoration:none; font-weight:bold; }
-section { background:white; margin:20px; padding:20px; border-radius:8px; }
-.box { background:#eef3f8; padding:15px; border-left:4px solid #003366; }
+body{
+  font-family: Arial, sans-serif;
+  margin:0;
+  background:#f4f6f8;
+  line-height:1.6;
+}
+header{
+  background:#003366;
+  color:#fff;
+  padding:20px;
+  text-align:center;
+}
+nav{
+  background:#005599;
+  padding:10px;
+  text-align:center;
+}
+nav a{
+  color:#fff;
+  margin:0 12px;
+  text-decoration:none;
+  font-weight:bold;
+}
+section{
+  background:#fff;
+  margin:20px;
+  padding:20px;
+  border-radius:8px;
+}
+h2{ color:#003366; }
+.box{
+  background:#eef3f8;
+  padding:15px;
+  border-left:4px solid #003366;
+  margin:15px 0;
+}
+.exercise{
+  background:#f9f9f9;
+  padding:15px;
+  border-left:4px solid #999;
+  margin:15px 0;
+}
+footer{
+  background:#003366;
+  color:#fff;
+  text-align:center;
+  padding:10px;
+  margin-top:30px;
+}
+svg{
+  background:#fff;
+  border:1px solid #ccc;
+  margin-top:10px;
+}
 </style>
-
 </head>
 
 <body>
 
 <header>
 <h1>Travail et énergie cinétique</h1>
-<p>1ʳᵉ Bac Sciences Mathématiques & Sciences Physiques</p>
+<p>1ʳᵉ Bac Sciences Mathématiques & Sciences Physiques – Programme marocain</p>
 </header>
 
 <nav>
@@ -31,36 +78,67 @@ section { background:white; margin:20px; padding:20px; border-radius:8px; }
 </nav>
 
 <section>
-<h2>1. Rappel de cours</h2>
+<h2>1. Définition de l’énergie cinétique</h2>
 <p>
-L’énergie cinétique d’un solide de masse <b>m</b> animé d’une vitesse <b>v</b> est :
+Un solide de masse <b>m</b> animé d’un mouvement de translation à la vitesse <b>v</b>
+possède une <b>énergie cinétique</b>, notée <b>Ec</b>.
 </p>
-<p><b>Ec = ½ m v²</b></p>
-</section>
 
-<section>
-<h2>2. Théorème de l’énergie cinétique</h2>
 <div class="box">
-La variation de l’énergie cinétique d’un solide est égale à la somme
-des travaux des forces qui s’exercent sur lui.
+<b>Expression mathématique :</b><br>
+Ec = ½ m v²
+</div>
+
+<p>
+L’énergie cinétique dépend :
+<ul>
+<li>de la masse du solide</li>
+<li>du carré de la vitesse</li>
+</ul>
+</p>
+
+<div class="box">
+<b>Unité :</b> le joule (J)
 </div>
 </section>
 
 <section>
-<h2>3. Activité interactive (PhET)</h2>
-<p><b>Consigne :</b> Modifie la vitesse et observe l’évolution de l’énergie cinétique.</p>
-
-<iframe
-src="https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_fr.html"
-width="100%" height="450">
-</iframe>
+<h2>2. Analyse de l’expression Ec = ½ m v²</h2>
+<p>
+À masse constante, l’énergie cinétique est proportionnelle au carré de la vitesse.
+Ainsi :
+</p>
+<ul>
+<li>si la vitesse double, l’énergie cinétique est multipliée par 4 ;</li>
+<li>si la vitesse est divisée par 2, l’énergie cinétique est divisée par 4.</li>
+</ul>
+<p>
+Cette dépendance explique l’augmentation rapide des distances de freinage
+lorsque la vitesse augmente.
+</p>
 </section>
 
 <section>
-<h2>4. Exercices d’application</h2>
-<p><b>Exercice 1 :</b> Un solide de masse 2 kg se déplace à 5 m/s. Calculer son énergie cinétique.</p>
-<p><b>Exercice 2 :</b> Si la vitesse double, que devient l’énergie cinétique ?</p>
+<h2>3. Représentation schématique</h2>
+<p>Solide en mouvement de translation :</p>
+
+<svg width="420" height="160">
+  <rect x="60" y="70" width="70" height="30" fill="#4CAF50"/>
+  <line x1="130" y1="85" x2="260" y2="85" stroke="red" stroke-width="4"/>
+  <polygon points="260,85 245,78 245,92" fill="red"/>
+  <text x="160" y="60">v</text>
+  <text x="60" y="125">m</text>
+</svg>
+
+<p>
+Le vecteur vitesse caractérise le mouvement du solide et justifie l’existence
+de l’énergie cinétique.
+</p>
 </section>
 
-</body>
-</html>
+<section>
+<h2>4. Théorème de l’énergie cinétique</h2>
+
+<div class="box">
+La variation de l’énergie cinétique d’un solide entre deux positions
+est égale à la somme des travaux des forces qui s’exercent sur lui.
