--- a/energie-cinetique1.html
+++ b/energie-cinetique1.html
@@ -1,72 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<title>Énergie cinétique – 1ʳᵉ Bac</title>
-
-<style>
-body{
-  font-family: Arial, sans-serif;
-  margin:0;
-  background:#f4f6f8;
-  line-height:1.6;
-}
-header{
-  background:#003366;
-  color:#fff;
-  padding:20px;
-  text-align:center;
-}
-nav{
-  background:#005599;
-  padding:10px;
-  text-align:center;
-}
-nav a{
-  color:#fff;
-  margin:0 12px;
-  text-decoration:none;
-  font-weight:bold;
-}
-section{
-  background:#fff;
-  margin:20px;
-  padding:20px;
-  border-radius:8px;
-}
-h2{ color:#003366; }
-.box{
-  background:#eef3f8;
-  padding:15px;
-  border-left:4px solid #003366;
-  margin:15px 0;
-}
-.exercise{
-  background:#f9f9f9;
-  padding:15px;
-  border-left:4px solid #999;
-  margin:15px 0;
-}
-footer{
-  background:#003366;
-  color:#fff;
-  text-align:center;
-  padding:10px;
-  margin-top:30px;
-}
-svg{
-  background:#fff;
-  border:1px solid #ccc;
-  margin-top:10px;
-}
-</style>
-</head>
-
 <body>
 
 <header>
 <h1>Travail et énergie cinétique</h1>
-<p>1ʳᵉ Bac Sciences Mathématiques & Sciences Physiques – Programme marocain</p>
+<p>1ʳᵉ Bac Sciences Mathématiques & Sciences Physiques</p>
 </header>
 
 <nav>
@@ -78,41 +14,22 @@ svg{
 </nav>
 
 <section>
-<h2>1. Définition de l’énergie cinétique</h2>
+<h2>1. Rappel de cours : Énergie cinétique</h2>
 <p>
 Un solide de masse <b>m</b> animé d’un mouvement de translation à la vitesse <b>v</b>
-possède une <b>énergie cinétique</b>, notée <b>Ec</b>.
+possède une énergie cinétique :
 </p>
-
-<div class="box">
-<b>Expression mathématique :</b><br>
-Ec = ½ m v²
-</div>
-
+<div class="box"><b>Ec = ½ m v²</b></div>
 <p>
-L’énergie cinétique dépend :
-<ul>
-<li>de la masse du solide</li>
-<li>du carré de la vitesse</li>
-</ul>
+Elle dépend de la masse et du carré de la vitesse.
 </p>
-
-<div class="box">
-<b>Unité :</b> le joule (J)
-</div>
 </section>
 
 <section>
-<h2>2. Analyse de l’expression Ec = ½ m v²</h2>
+<h2>2. Interprétation physique</h2>
 <p>
-À masse constante, l’énergie cinétique est proportionnelle au carré de la vitesse.
-</p>
-<ul>
-<li>si la vitesse double, l’énergie cinétique est multipliée par 4</li>
-<li>si la vitesse est divisée par 2, l’énergie cinétique est divisée par 4</li>
-</ul>
-<p>
-Cette dépendance explique l’augmentation rapide des distances de freinage.
+Plus la vitesse est grande, plus l’énergie cinétique est importante.
+Si la vitesse double, l’énergie cinétique est multipliée par 4.
 </p>
 </section>
 
@@ -127,49 +44,54 @@ Cette dépendance explique l’augmentation rapide des distances de freinage.
   <text x="60" y="125">m</text>
 </svg>
 
+</section>
+
+<section>
+<h2>4. Activité de simulation (PhET)</h2>
+
+<p><b>Objectif :</b> Observer l’évolution de l’énergie cinétique en fonction de la vitesse.</p>
+
+<p><b>Consignes :</b></p>
+<ul>
+<li>Lancer la simulation</li>
+<li>Augmenter la vitesse</li>
+<li>Observer l’énergie cinétique</li>
+</ul>
+
 <p>
-Le vecteur vitesse caractérise le mouvement du solide.
+<a href="https://phet.colorado.edu/sims/html/energy-skate-park-basics/latest/energy-skate-park-basics_fr.html"
+target="_blank">
+👉 Ouvrir la simulation PhET – Energy Skate Park
+</a>
 </p>
+
 </section>
 
 <section>
-<h2>4. Théorème de l’énergie cinétique</h2>
-
-<div class="box">
-La variation de l’énergie cinétique d’un solide entre deux positions
-est égale à la somme des travaux des forces qui s’exercent sur lui.
-</div>
-
-<p>
-Ce théorème relie le travail des forces à la variation de l’énergie cinétique.
-</p>
-</section>
-
-<section>
-<h2>5. Activité interactive (PhET)</h2>
-
-<p><b>Simulation :</b> Energy Skate Park</p>
-
-<iframe
-src="https://phet.colorado.edu/sims/html/energy-skate-park-basics/latest/energy-skate-park-basics_fr.html"
-width="100%" height="500">
-</iframe>
-</section>
-
-<section>
-<h2>6. Exercices d’application (niveau Bac)</h2>
+<h2>5. S’exercer – Applications directes</h2>
 
 <div class="exercise">
-<b>Exercice 1 :</b>  
-Un solide de masse 2 kg se déplace à 5 m·s⁻¹.  
+<b>Exercice 1 :</b><br>
+Un solide de masse 2 kg se déplace à 5 m·s⁻¹.<br>
 Calculer son énergie cinétique.
 </div>
 
 <div class="exercise">
-<b>Exercice 2 :</b>  
-Une voiture de masse 1200 kg roule à 20 m·s⁻¹ puis s’arrête.  
-Interpréter la variation de l’énergie cinétique.
+<b>Exercice 2 :</b><br>
+Un solide A et un solide B ont la même masse.<br>
+La vitesse de B est double de celle de A.<br>
+Comparer leurs énergies cinétiques.
 </div>
+
+</section>
+
+<section>
+<h2>6. S’exercer – QCM</h2>
+
+<p>Lorsque la vitesse d’un solide double, son énergie cinétique :</p>
+<input type="radio"> double<br>
+<input type="radio"> est multipliée par 4<br>
+<input type="radio"> reste constante<br>
 
 </section>
 
@@ -178,4 +100,3 @@ Interpréter la variation de l’énergie cinétique.
 </footer>
 
 </body>
-</html>
