--- a/energie-interne.html
+++ b/energie-interne.html
@@ -13,7 +13,8 @@ aside a{display:block;margin:10px 0;color:#003366;font-weight:bold;text-decorati
 main{flex:1;padding:30px;background:#fff;}
 h2{color:#003366;}
 .box{background:#eef3f8;padding:15px;border-left:4px solid #003366;margin:15px 0;}
-.sim{background:#fafafa;padding:15px;border:1px solid #ccc;margin-top:15px;}
+.sim{border:1px solid #ccc;padding:15px;margin-top:15px;background:#fafafa;}
+canvas{border:1px solid #999;background:#fff;}
 label{display:block;margin-top:10px;}
 footer{background:#003366;color:#fff;text-align:center;padding:10px;}
 </style>
@@ -30,104 +31,126 @@ footer{background:#003366;color:#fff;text-align:center;padding:10px;}
 
 <aside>
 <h3>Sommaire</h3>
-<a href="#def">I – Effets du travail d’une force</a>
+<a href="#def">I – Effets du travail</a>
 <a href="#defor">1. Déformation</a>
-<a href="#temp">2. Élévation de température</a>
+<a href="#temp">2. Frottement</a>
 <a href="#etat">3. Changement d’état</a>
 </aside>
 
 <main>
 
 <section id="def">
-<h2>I – Effets du travail d’une force</h2>
 <div class="box">
-L’énergie interne U est la somme des énergies microscopiques
-(cinétique + potentielle) des particules d’un système.
+L’énergie interne U correspond à l’énergie microscopique
+des particules du système.
 </div>
 </section>
 
-<!-- DÉFORMATION -->
+<!-- 1. DÉFORMATION -->
 <section id="defor">
-<h2>1. Déformation d’un objet élastique</h2>
-<p>Le travail reçu est stocké sous forme d’énergie interne.</p>
+<h2>1. Déformation d’un objet (ressort animé)</h2>
 
 <div class="sim">
-<label>Force appliquée (N) :
-<input type="range" id="force" min="0" max="50" value="10"
-oninput="calcDef()"></label>
+<canvas id="spring" width="400" height="120"></canvas>
 
-<label>Allongement (m) :
-<input type="range" id="elong" min="0" max="0.5" step="0.05" value="0.1"
-oninput="calcDef()"></label>
+<label>Force appliquée (N)
+<input type="range" id="F" min="0" max="50" value="10" oninput="drawSpring()">
+</label>
 
-<p>Travail reçu :
-<b><span id="Wdef">0</span> J</b></p>
-
-<p>Variation de l’énergie interne :
-<b>ΔU = W</b></p>
+<p>Travail reçu : <b><span id="W1">0</span> J</b></p>
 </div>
 
 <script>
-function calcDef(){
-  let F=parseFloat(force.value);
-  let x=parseFloat(elong.value);
-  let W=F*x;
-  Wdef.innerText=W.toFixed(2);
+let s=document.getElementById("spring").getContext("2d");
+function drawSpring(){
+  let Fval=F.value;
+  let x=Fval*2;
+  s.clearRect(0,0,400,120);
+  s.fillText("Mur",10,65);
+  for(let i=0;i<10;i++){
+    s.beginPath();
+    s.moveTo(40+i*20,60);
+    s.lineTo(50+i*20+x/10,60);
+    s.stroke();
+  }
+  s.fillRect(300+x/10,50,30,20);
+  W1.innerText=(Fval*(x/100)).toFixed(2);
 }
-calcDef();
+drawSpring();
 </script>
 </section>
 
-<!-- TEMPÉRATURE -->
+<!-- 2. FROTTEMENT -->
 <section id="temp">
-<h2>2. Élévation de la température par frottement</h2>
-<p>Le travail des frottements augmente l’agitation microscopique.</p>
+<h2>2. Frottement et élévation de température</h2>
 
 <div class="sim">
-<label>Force de frottement (N) :
-<input type="range" id="ff" min="0" max="20" value="5"
-oninput="calcTemp()"></label>
+<canvas id="friction" width="400" height="120"></canvas>
 
-<label>Distance parcourue (m) :
-<input type="range" id="d" min="0" max="10" value="2"
-oninput="calcTemp()"></label>
+<label>Force de frottement (N)
+<input type="range" id="ff" min="0" max="20" value="5">
+</label>
 
-<p>Travail des frottements :
-<b><span id="Wf">0</span> J</b></p>
+<button onclick="move()">Lancer le mouvement</button>
 
-<p>Température :
-<b><span id="T">20</span> °C</b></p>
+<p>Température : <b><span id="T">20</span> °C</b></p>
 </div>
 
 <script>
-function calcTemp(){
-  let W=ff.value*d.value;
-  Wf.innerText=W.toFixed(1);
-  T.innerText=(20+0.5*W).toFixed(1);
+let f=document.getElementById("friction").getContext("2d");
+let bx=20, T=20;
+
+function drawBlock(){
+  f.clearRect(0,0,400,120);
+  f.fillRect(bx,60,40,30);
 }
-calcTemp();
+drawBlock();
+
+function move(){
+  let interval=setInterval(()=>{
+    if(bx<320){
+      bx+=2;
+      T+=ff.value*0.05;
+      document.getElementById("T").innerText=T.toFixed(1);
+      drawBlock();
+    }else clearInterval(interval);
+  },40);
+}
 </script>
 </section>
 
-<!-- CHANGEMENT D'ÉTAT -->
+<!-- 3. CHANGEMENT D'ÉTAT -->
 <section id="etat">
-<h2>3. Changement d’état</h2>
-<p>Le travail reçu peut modifier l’état physique sans variation de température.</p>
+<h2>3. Changement d’état (fusion animée)</h2>
 
 <div class="sim">
-<label>Énergie reçue (J) :
-<input type="range" id="E" min="0" max="200" value="0"
-oninput="calcState()"></label>
+<canvas id="state" width="400" height="120"></canvas>
 
-<p>État du système :
-<b><span id="state">Glace</span></b></p>
+<label>Énergie reçue (J)
+<input type="range" id="E" min="0" max="200" value="0" oninput="drawState()">
+</label>
+
+<p>État : <b><span id="S">Glace</span></b></p>
 </div>
 
 <script>
-function calcState(){
-  state.innerText = E.value<100 ? "Glace" : "Eau (fusion)";
+let c=document.getElementById("state").getContext("2d");
+
+function drawState(){
+  c.clearRect(0,0,400,120);
+  if(E.value<100){
+    c.fillStyle="#b3e5fc";
+    c.fillRect(150,60,80,30);
+    S.innerText="Glace";
+  }else{
+    c.fillStyle="#4fc3f7";
+    c.beginPath();
+    c.arc(190,75,20,0,Math.PI*2);
+    c.fill();
+    S.innerText="Eau";
+  }
 }
-calcState();
+drawState();
 </script>
 </section>
 
